# gpu_sandbox

./: .gitignore  CMakeLists.txt  SceneFoundry_gpu_sandbox.vcxproj  SceneFoundry_gpu_sandbox.vcxproj.filters  _.cpp  _.h  application.cpp  application.h  document.cpp  document.h  global_ubo.h  impact.cpp  impact.h  main_frame.cpp  main_frame.h  pane_impact.cpp  pane_impact.h
__implement/: CMakeLists.txt  main.cpp  shared_SceneFoundry_gpu_sandbox.vcxproj
aaa_core_interfaces/include/: frame_info.h
aaa_core_interfaces/include/interfaces/: render_system_i.h  renderer_i.h  scene_i.h
aaa_external/tinygltf/: tiny_gltf.h
aaa_sandbox_game/: CMakeLists.txt
aaa_sandbox_game/include/camera/: camera.h
aaa_sandbox_game/include/entities/: game_object.h
aaa_sandbox_game/include/game/: game_layer.h
aaa_sandbox_game/include/input/: player_input.h
aaa_sandbox_game/src/: main.cpp
aaa_sandbox_game/src/entities/: game_object.cpp  player.cpp
aaa_sandbox_game/src/game/: game_layer.cpp
aaa_sandbox_game/src/input/: player_input.cpp
aaa_sandbox_game/src/scene/: scene.cpp
aaa_sandbox_renderer/include/common/: exception.h  render_data.h
aaa_sandbox_renderer/include/vk_tools/: vk_descriptor_reg.h  vk_tools.h
aaa_sandbox_renderer/include/vulkan_wrapper/: vulkan_buffer.h  vulkan_descriptor.h  vulkan_device.h  vulkan_obj.h  vulkan_swapchain.h
aaa_sandbox_renderer/include/vulkan_wrapper/render_systems/: obj_render_system.h  skybox_ibl_rs.h
aaa_sandbox_renderer/src/vk_tools/: vk_tools.cpp
aaa_sandbox_renderer/src/vulkan_wrapper/: vulkan_gltf.cpp  vulkan_image.cpp  vulkan_instance.cpp  vulkan_obj.cpp  vulkan_renderer.cpp  vulkan_texture.cpp
aaa_sandbox_renderer/src/vulkan_wrapper/render_systems/: gltf_render_system.cpp  skybox_ibl_rs.cpp
core_interfaces/: CMakeLists.txt
core_interfaces/include/: frame_info.h
core_interfaces/include/interfaces/: asset_provider_i.h  camera_i.h  entity_i.h  game_layer_i.h  game_object_i.h  model_i.h  provider_i.h  registry_i.h  render_system_i.h  renderer_i.h  scene_i.h  window_input_i.h
graphics3d/: main_scene.cpp  main_scene.h  point_light_system.cpp  point_light_system.h  simple_render_system.cpp  simple_render_system.h
res/shaders/: compile.bat  frag.frag  gltf_frag.frag  gltf_vert.vert  point_light.frag  point_light.vert  vert.vert
res/shaders/spirV/: frag.frag.spv  gltf_frag.frag.spv  gltf_vert.vert.spv  point_light.frag.spv  point_light.vert.spv  skybox_ibl.frag.spv  skybox_ibl.vert.spv  vert.vert.spv
sandbox_engine/: CMakeLists.txt
sandbox_engine/include/: asset_manager.h  engine.h  instance.h  render_scene_data.h  window.h
sandbox_engine/include/common/: glfw_input.h
sandbox_engine/include/interfaces/: entity_interface.h  game_layer_interface.h  window_input_interface.h
sandbox_engine/include/platform/: glfw_input.h  key_codes.h
sandbox_engine/src/: asset_manager.cpp  engine.cpp  glfw_input.cpp  instance.cpp  window.cpp
sandbox_engine/src/common/: glfw_input.cpp
sandbox_engine/src/platform/: glfw_input.cpp
sandbox_game/: CMakeLists.txt
sandbox_game/include/camera/: camera.h
sandbox_game/include/entities/: game_object.h  player.h
sandbox_game/include/game/: game_layer.h
sandbox_game/include/input/: player_input.h
sandbox_game/include/player/: player.h
sandbox_game/include/scene/: scene.h
sandbox_game/res/scene_assets/: default_scene_assets.json
sandbox_game/res/scenes/: default_scene.json
sandbox_game/src/: main.cpp
sandbox_game/src/camera/: camera.cpp
sandbox_game/src/entities/: game_object.cpp  player.cpp
sandbox_game/src/game/: game_layer.cpp
sandbox_game/src/input/: player_input.cpp
sandbox_game/src/player/: player.cpp
sandbox_game/src/scene/: scene.cpp
sandbox_renderer/: CMakeLists.txt
sandbox_renderer/include/: model_interface.h  renderer.h  renderer_interface.h  window.h
sandbox_renderer/include/vk_tools/: vk_descriptor_reg.h  vk_descriptor_req.h  vk_init.h  vk_tools.h
sandbox_renderer/include/vulkan_wrapper/: obj_model.h  vulkan_buffer.h  vulkan_descriptor.h  vulkan_device.h  vulkan_gltf.h  vulkan_image.h  vulkan_instance.h  vulkan_obj.h  vulkan_pipeline.h  vulkan_renderer.h  vulkan_swapchain.h  vulkan_texture.h
sandbox_renderer/include/vulkan_wrapper/render_passes/: gbuffer_pass.h
sandbox_renderer/include/vulkan_wrapper/render_systems/: gltf_render_system.h  obj_render_system.h  point_light_rs.h  skybox_ibl_rs.h
sandbox_renderer/src/: renderer.cpp  renderer_interface.cpp  window.cpp
sandbox_renderer/src/vk_tools/: vk_descriptor_reg.cpp
sandbox_renderer/src/vulkan_wrapper/: obj_model.cpp  vk_instance.cpp  vulkan_buffer.cpp  vulkan_descriptor.cpp  vulkan_device.cpp  vulkan_gltf.cpp  vulkan_instance.cpp  vulkan_obj.cpp  vulkan_pipeline.cpp  vulkan_renderer.cpp  vulkan_swapchain.cpp  vulkan_texture.cpp
sandbox_renderer/src/vulkan_wrapper/render_systems/: gltf_render_system.cpp  obj_render_system.cpp  point_light_rs.cpp  skybox_ibl_rs.cpp
